feat: 전기능 구현 완료

--- a/.eslintrc
+++ b/.eslintrc
@@ -29,9 +29,12 @@
         // 불필요한 세미콜론 사용 시 에러 표시
         "no-extra-semi": "error",
         // jsx 파일 확장자 .jx, .jsx, .ts, .tsx 허용
-        "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+        "react/jsx-filename-extension": [
+            2,
+            { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
+        ],
         // 화살표 함수의 파라미터가 하나일때 괄호 생략
-        "arrow-parens": ["warn", "as-needed"],
+        "arrow-parens": "off",
         // 사용하지 않는 변수가 있을 때 발생하는 경고 비활성화
         "no-unused-vars": ["off"],
         // 콘솔 사용 시 발생하는 경고 비활성화
@@ -53,21 +56,30 @@
             2,
             { "namedComponents": ["arrow-function", "function-declaration"] }
         ],
-        "react/react-in-jsx-scope": 0,
+        "react/react-in-jsx-scope": "off",
         "react/prefer-stateless-function": 0,
         "react/jsx-one-expression-per-line": 0,
         "no-nested-ternary": 0,
         // 파일의 경로가 틀렸는지 확인하는 옵션 false
         "import/no-unresolved": ["error", { "caseSensitive": false }],
         // props spreading 허용하지 않는 경고 표시
-        "react/jsx-props-no-spreading": [1, { "custom": "ignore" }],
+        "react/jsx-props-no-spreading": "off",
         "linebreak-style": 0,
         "import/extensions": 0,
         "no-use-before-define": 0,
         // 테스트 또는 개발환경을 구성 파일에서는 devDependency 사용 허용
         "import/no-extraneous-dependencies": 0,
         "no-shadow": 0,
-        "jsx-a11y/no-noninteractive-element-interactions": 0
+        "jsx-a11y/no-noninteractive-element-interactions": 0,
+        "jsx-a11y/label-has-associated-control": "off",
+        "react/jsx-no-bind": "off",
+        "react/no-array-index-key": "off",
+        "jsx-a11y/click-events-have-key-events": "off",
+        "jsx-a11y/no-static-element-interactions": "off",
+        "react/no-danger": "off",
+        "no-param-reassign": "off",
+        "array-callback-return": "off",
+        "react/require-default-props": "off"
     },
     "settings": {
         "import/resolver": {
